fix: clean git cache, optimize Dockerfile RAM and WebSocket limits